27/10/2024:
	- Added ability to inject ICC profile and XMP metadata into pre-encoded tiles returned from TIFF images. These
	  are essentially raw bitstreams with no container. Works for both JPEG and WebP formats.


17/10/2024:
	- Added basic test script for use via "make check" that tests whether iipsrv can be executed and whether it
	  can create a log file.


16/10/2024:
	- Changes to how the requested width and height are handled by View class as well as how the resolution level
	  is calculated. Fixes problems with fitting images into bounding boxes and now correctly selects appropriate
	  resolution level in all cases. Fixes https://github.com/ruven/iipsrv/issues/273


02/10/2024:
	- Re-factoring of tile byte size check to work cleanly for both JPEG and WEBP and to avoid having to sometimes
	  reallocate memory


01/10/2024:
	- Added check for tile byte size when passing through pre-encoded JPEG tiles for TIFF as these can occasionally
	  be larger than the byte size of raw data.


25/09/2024:
	- Added support for directly reading standard JPEG input images. Implementation uses libjpeg's partial decoding
	  and DCT-scaling functions to optimize decoding as much as is possible and supports ICC, XMP and EXIF metadata.
	  Note that JPEG does not support multi-resolution encoding, so decoding will be slower than reading TIFF
	  or JPEG2000, especially for large images.


24/09/2024:
	- Added TIFF codec version reporting in logfile and updated return signature for getCodecVersion() function.
	  Also code cleanups for OpenJPEGImage and KakaduImage classes.


13/09/2024:
	- Updated XYZ to sRGB conversion matrix to use that in the official IEC 61966-2-1 specification


06/09/2024:
	- Added extra URL decoding to ID field for IIIF's info.json. Fixes https://github.com/ruven/iipsrv/issues/270


05/09/2024:
	- Added convenience function to Rawtile class to duplicate bands for encoders that cannot natively handle