@@ -52,6 +52,9 @@ class AVIFCompressor : public Compressor {
   /// Write XMP metadata
   void writeXMPMetadata();
 
+  /// Write EXIF metadata
+  void writeExifMetadata();
+
 
  public:
 
