@@ -80,7 +80,10 @@ class PNGCompressor : public Compressor {
   /// Write XMP metadata
   void writeXMPMetadata();
 
-  
+  /// Write EXIF metadata
+  void writeExifMetadata();
+
+
  public:
 
   /// Constructor
