@@ -53,6 +53,9 @@ class WebPCompressor : public Compressor {
   /// Write XMP metadata
   void writeXMPMetadata();
 
+  /// Write EXIF metadata
+  void writeExifMetadata();
+
 
  public:
 
